syntax = "proto3";
package protolca.services;

option csharp_namespace = "ProtoLCA.Services";
option go_package = ".;protolca";
option java_package = "org.openlca.proto.grpc";
option java_multiple_files = true;
option java_outer_classname = "CommonsProto";

import "olca.proto";

message DataSet {
  oneof model {
    Actor actor = 1;
    Category category = 2;
    Currency currency = 3;
    DQSystem dq_system = 4;
    Flow flow = 5;
    FlowProperty flow_property = 6;
    ImpactCategory impact_category = 7;
    ImpactMethod impact_method = 8;
    Location location = 9;
    Parameter parameter = 10;
    Process process = 11;
    ProductSystem product_system = 12;
    Project project = 13;
    SocialIndicator social_indicator = 14;
    Source source = 15;
    UnitGroup unit_group = 16;
  }
}

// A technosphere flow is a pair of a process and a flow where the flow can be a
// product or waste flow. For products flows, the process is a process that
// produces this product; thus, has it on the output side. For waste flows, the
// process is a process that consumes this waste flow; thus, has it on the input
// side. In a product system, there can be multiple tech-flows with the same
// product or waste flow but different processes, e.g. when there are multiple
// processes that produce the same product.
message TechFlow {
  Ref process = 1;
  oneof flow {
    Ref product = 2;
    Ref waste = 3;
  }
}

message EnviFlow {
  Ref flow = 1;
  Ref location = 2;
  bool is_input = 3;
}
